...
                    children: [
                      Image.asset(
                        "res/block.png",
                        width: 50,
                      ),
                      const Text(
                        "Skills",
                        style: TextStyle(color: Colors.white, fontWeight: FontWeight.bold, fontSize: 25),
                      ),
                    ],
                  ),
                )),
            Expanded(
...
                        children: const [
                          Text(
                            "Can't find you want?",
                            style: TextStyle(color: Colors.white, fontSize: 10),
                          ),
                          Text(
                            "Search Now",
                            style: TextStyle(
                              color: Colors.white,
                              fontSize: 20,
                              fontWeight: FontWeight.bold,
                              fontStyle: FontStyle.italic,
                            ),
...
                              },
                            ),
                          );
                        }));
                      },
                      child: Container(
                        key: const Key("Search Button"),
                        decoration: BoxDecoration(borderRadius: BorderRadius.circular(360), color: Colors.white),
                        child: Padding(
                          padding: const EdgeInsets.all(10.0),
                          child: Icon(
                            Icons.search,
                            color: Colors.purple.shade800,
...
