...
                        children: [
                          Image.asset(
                            "res/block.png",
                            width: 40,
                          ),
                          Text(
                            jsonDecode(widget.keyWord)["title"] == "" ? jsonDecode(widget.keyWord)["skill"] : "Search Results",
                            style: const TextStyle(color: Colors.white, fontSize: 20, fontWeight: FontWeight.bold),
                          ),
                        ],
                      ),
                    )
                  ],
...
